--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ms_persist
-description: A mixin that help you on handling model as a CRUD
-version: 0.1.0
+description: A mixin that help you on handling model as a CRUD, you just need implement 3 overrides
+version: 0.1.0+1
 homepage: https://github.com/Marcus-Software/ms_persist
 
 environment:
