--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: example
-description: A simple counter example.
+name: persist_example
+description: A simple counter example with persist.
 version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
