--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,13 @@ environment:
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
-  path_provider: ">=1.6.0 <2.0.0"
-  sembast_sqflite: ">=1.0.0 <2.0.0"
-  uuid: ">=2.2.0 <3.0.0"
-  path: ">=1.7.0 <2.0.0"
-  sqflite: ">=1.3.0 <2.0.0"
   ms_map_utils: ">=0.7.0 <1.0.0"
+  path: ">=1.7.0 <2.0.0"
+  path_provider: ">=1.6.0 <2.0.0"
+  sembast: ">=2.4.0 <3.0.0"
+  sembast_sqflite: ">=1.0.0 <2.0.0"
+  sqflite: ">=1.3.0 <2.0.0"
+  uuid: ">=2.2.0 <3.0.0"
 
 
 dev_dependencies:
