--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,30 @@
 name: ms_persist
 description: A mixin that help you on handling model as a CRUD, you just need implement 3 overrides
-version: 1.0.1
+version: 2.0.0
 homepage: https://github.com/Marcus-Software/ms_persist
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.19.6 <4.0.0"
+  flutter: ">=2.5.0"
 
 dependencies:
-  ms_map_utils: ">=0.7.0 <1.0.0"
+  flutter:
+    sdk: flutter
+  ms_map_utils: ">=1.0.0 <2.0.0"
   path: ">=1.7.0 <2.0.0"
-  path_provider: ">=1.6.0 <3.0.0"
-  sembast: ">=2.4.0 <4.0.0"
-  sembast_sqflite: ">=1.0.0 <3.0.0"
-  sqflite: ">=1.3.0 <3.0.0"
-  uuid: ">=2.2.0 <3.0.0"
+  path_provider: ">=2.0.0 <3.0.0"
+  sembast_web: ">=2.0.0 <4.0.0"
+  sembast_sqflite: ">=2.0.0 <3.0.0"
+  sqflite: ">=2.0.0 <3.0.0"
+  uuid: ">=3.0.0 <5.0.0"
+  sqflite_common_ffi: ^2.3.3
+  sembast: ^3.7.1+2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  dependency_validator: ^4.1.0
   mockito: any
-  test_coverage: ^0.5.0
 
 flutter:
