feature: campo storeName adicionado

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ms_persist
 description: A mixin that help you on handling model as a CRUD, you just need implement 3 overrides
-version: 2.1.1
+version: 2.2.0
 homepage: https://github.com/Marcus-Software/ms_persist
 
 environment:
@@ -17,14 +17,16 @@ dependencies:
   sembast_sqflite: ">=2.0.0 <3.0.0"
   sqflite: ">=2.0.0 <3.0.0"
   uuid: ">=3.0.0 <5.0.0"
-  sqflite_common_ffi: ^2.3.3
-  sembast: ^3.7.1+2
+  sqflite_common_ffi: ^2.3.4
+  sembast: ^3.7.5
+  meta: ^1.15.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dependency_validator: ^4.1.0
+  dependency_validator: ^4.1.1
   mockito: any
 
 flutter:
+
